src/styles.css
:root {
  --default-font-family: "Roboto", sans-serif;
  --button-font-family: "Montserrat", sans-serif;
  --primary-color: #141517;
  --secondary-color: #f65282;
}

body {
  background-color: var(--primary-color);
}

h1 {
  color: white;
  font-family: var(--default-font-family);
  font-weight: bold;
  text-transform: uppercase;
  font-size: 72px;
  margin-bottom: 25px;
}

h2 {
  color: white;
  font-family: var(--default-font-family);
  font-weight: regular;
  text-transform: uppercase;
  font-size: 24px;
  line-height: 28px;
  margin-bottom: 25px;
}

p {
  color: white;
  font-family: var(--default-font-family);
  font-weight: lighter;
  font-size: 18px;
  margin-bottom: 48px;
}

a.button-link {
  font-family: var(--button-font-family);
  text-transform: uppercase;
  color: black;
  text-decoration: none;
  padding: 18px 30px;
  background: white;
  font-size: 14px;
  border-radius: 50px;
  line-height: 0.7;
  display: inline-block;
}
hr {
  color: white;
  width: 600px;
  display: block;
  margin: 30px auto;
}

.hero-p {
  width: 400px;
  display: block;
  margin: 0 auto;
  margin-bottom: 33px;
}

.project-img {
  border-radius: 15px;
}

.container h1 {
  font-size: 40px;
}

.hero {
  text-align: center;
  background-image: url("/images/background.png");
  padding-top: 276px;
  padding-bottom: 301px;
  background-size: cover;
}

.featured {
  text-align: center;
  font-weight: bold;
  font-size: 25px;
}
.weather-project {
  text-align: end;
}

.about-text {
  margin-left: 40px;
}
.about-h2 {
  font-size: 18px;
  color: var(--secondary-color);
  margin-bottom: 32px;
  margin-top: 51px;
}

.about-h1 {
  font-size: 64px;
  margin: 0;
  margin-bottom: 22px;
}

.about-h3 {
  color: white;
  font-size: 18px;
  margin-left: 30px;
}

.about-p {
  font-size: 18px;
  margin-bottom: 62px;
  max-width: 500px;
}

ul.social-icons {
  list-style: none;
  display: flex;
  justify-content: space-between;
  padding: 0;
  max-width: 100px;
  margin-bottom: 66px;
}

.camera-info {
  display: flex;
  background-color: #2d2727;
  padding: 20px;
  max-width: 430px;
  margin-bottom: 66px;
  align-items: center;
}

.gallery-h1 {
  margin-bottom: 166px;
}

.contact-h1 {
  margin-bottom: 142px;
}
.contact-h3 {
  color: #f65282;
  font-size: 14px;
  text-transform: uppercase;
}

.navbar {
  background-color: #202020;
}
.logo {
  max-width: 150px;
  margin-left: 140px;
}
ul.nav-list {
  list-style: none;
  margin-right: 140px;
  margin-bottom: 0;
}
li {
  display: inline;
}

.nav-list a {
  text-decoration: none;
  color: white;
  margin-left: 15px;
}

a.active {
  color: var(--secondary-color);
}

.navbar a:hover {
  color: var(--secondary-color);
}

i {
  color: white;
}

footer {
  background-color: #2d2727;
  align-items: center;
}
.footer-logo {
  max-width: 150px;
  height: 30px;
}
.footer {
  align-items: center;
  margin-top: 100px;
}
ul.footer-social-icons li {
  margin-left: 20px;
}

@media (max-width: 576px) {
  h1 {
    font-size: 30px;
  }
  .about-h1 {
    font-size: 30px;
  }
  h2 {
    font-size: 20px;
  }
  p {
    font-size: 15px;
  }
  .about-p {
    font-size: 15px;
  }
  a {
    font-size: 12px;
  }
  .hero {
    padding-top: 100px;
    padding-bottom: 100px;
  }

  .hero-p {
    max-width: 400px;
  }
  .container {
    text-align: center;
  }
  .container h1 {
    font-size: 30px;
    margin-top: 15px;
  }
  .weather-project {
    text-align: center;
  }
  .about-section {
    margin: 25px;
    text-align: center;
  }

  .social-icons {
    display: block;
    margin: 0 auto;
  }

  ul.nav-list {
    display: block;
    margin: 0 auto;
    padding: 0;
  }

  .gallery-h1,
  .contact-h1 {
    margin-bottom: 80px;
  }
  ul.footer-social-icons {
    padding: 0;
    margin: 0 auto;
  }
  .footer-li-1 {
    padding-left: 0;
  }
}

